# polyqh

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  run_pipeline.py
.zed/: settings.json
backend/: main.py  polymarket.py  requirements.txt  single-order.py
backend/strategies/: market_maker.py
client/: polymarket.py
engine/: main.py
engine/core/: polymarket.py
engine/strategies/: market_maker.py
labeler/: label_data.py
labeling/: __init__.py  label_data.py  spread_calculator.py
models/: __init__.py  train.py
scraper/: __init__.py  scrape.py
web/: package.json  pnpm-lock.yaml
web/src/actions/: wallet.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/: MarketCard.tsx  OpenOrders.tsx  PortfolioSummary.tsx  PositionsTable.tsx  RecentTrades.tsx
web/src/lib/: polymarket.ts
