[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyqh"
version = "0.1.0"
description = "Polymarket market maker powered by ML"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "py-clob-client",
    "python-dotenv",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
packages = ["client", "scraper", "labeler", "models"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
